--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -9,7 +9,8 @@
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
+  padding: 20px 0;
+  width: 100%;
   color: white;
 }
 
